[gd_scene load_steps=4 format=3 uid="uid://2w788sq5d482"]

[ext_resource type="Script" uid="uid://d2i7gu73l3pc2" path="res://src/scenes/ui/ui.gd" id="1_icrss"]
[ext_resource type="Theme" uid="uid://d2y52dhm20n0l" path="res://resources/ui/themes/ui_theme.tres" id="1_pt6fd"]
[ext_resource type="Texture2D" uid="uid://4pqahyudbi3o" path="res://assets/player/player.png" id="2_icrss"]

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_icrss")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HighScoreLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_pt6fd")
theme_override_font_sizes/font_size = 10
text = "High Score: 9,999"

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_pt6fd")
theme_override_font_sizes/font_size = 10
text = "Score: 1,997"

[node name="LifeLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_pt6fd")
theme_override_font_sizes/font_size = 10
text = "Lives:"
horizontal_alignment = 2

[node name="Life1TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("2_icrss")

[node name="Life2TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("2_icrss")

[node name="Life3TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("2_icrss")

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("1_pt6fd")
theme_override_font_sizes/font_size = 10
text = "Press 's' to start"
horizontal_alignment = 1
